观察者模式用PropertyChangeListener代替